--- a/src/app/missionlist/missionlist.component.html
+++ b/src/app/missionlist/missionlist.component.html
@@ -1,1 +1,20 @@
-<h2>SpaceX Mission Launch List</h2>
+<h2>Elon Musk SpaceX Mission Launch List</h2>
+<div>
+    
+
+    <div>
+        <h3>{{missionX.mission_name}}</h3>
+    </div>
+    <div>
+        <h4>Rocket: {{missionX.rocket.rocket_name}}</h4>
+    </div>
+    <div>
+        <h4>Type: {{missionX.rocket.rocket_type}}</h4>
+    </div>
+    <div>
+        <h4>Year: {{missionX.launch_year}}</h4>
+    </div>
+    <div>
+        <p>Details: {{missionX.details}}</p>
+    </div>
+</div>
