--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+<h1>{{title}}</h1>
 <nav>
-    <a routerLink="/src/app/missiondetails/missiondetails.component.html">Mission Details</a>
+    <a routerLink="/missionlist">Mission List</a>
+    <br>
+    <a routerLink="/missiondetails">Mission Details</a>
 </nav>
 <router-outlet></router-outlet>
