--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 <nav>
-    <a routerLink="/missionlist">Mission List</a>
+    <a routerLink="/missionlist" routerLinkActive="active">Mission List</a>
     <br>
-    <a routerLink="/missiondetails">Mission Details</a>
+    <a routerLink="/missiondetails" routerLinkActive="active">Mission Details</a>
 </nav>
 
 <router-outlet></router-outlet>
